Change stict file.

--- a/src/routes/static/index.html
+++ b/src/routes/static/index.html
@@ -52,7 +52,7 @@
         <br>
         <h2>This project is developed by the team 003 for the Projeto Integrador VIII</h2>
         <div>
-            <p>Students</p>
+            <p>Students: </p>
             <ul>
                 <li>CLAUDIO MARCIO STOCCO</li>
                 <li>FABIO ROGERIO DE SOUZA</li>
