Changing static home page

--- a/src/routes/static/index.html
+++ b/src/routes/static/index.html
@@ -32,7 +32,7 @@
                 <div>
                     <strong>/indicators</strong> => Recurso para manipular a coleção "indicators" do banco de dados, é possível cadastrar (POST), alterar (PUT) e listar (GET) valores dos indicadores da evolução da pandemia.
                     <ul>
-                        <li><strong>/indicators/:date</strong> => Para pesquisar por data.</li>
+                        <li><strong>/indicators/date/:date</strong> => Para pesquisar por data.</li>
                         <li><strong>/indicators/total</strong> => Para retornar os totais de casos, curados e óbitos.</li>
                         <li><strong>/indicators/total/:date</strong> => Para retornar os totais de casos, curados e óbitos para a data especificada.</li>
                     </ul>
@@ -43,7 +43,7 @@
                     <strong>/informations</strong> => Recurso para manipular a coleção "informations" do banco de dados, é possível cadastrar (POST), alterar (PUT) e listar (GET) informações.
                     <ul>
                         <li><strong>/informations/categories</strong> => Lista as categorias cadastradas</li>
-                        <li><strong>/informations/:category</strong> => Lista as informações de uma categoria</li>
+                        <li><strong>/informations/category/:category</strong> => Lista as informações de uma categoria</li>
                     </ul>
                 </div>
             </li>
