Changing static home page

--- a/src/routes/static/index.html
+++ b/src/routes/static/index.html
@@ -18,11 +18,11 @@
                 <strong>/version</strong> => Recurso para exibir a versão desta API.
             </li>
             <li>
-                <strong>/login/:email/:password</strong> => Recurso para validar o login no App, passando o email e asenha do usuário, necessário para responsáveis por alimentar os dados.
+                <strong>/login/:email/:password</strong> => Recurso para validar o login no App, passando o email e a senha do usuário, necessário para responsáveis por alimentar os dados.
             </li>
             <li>
                 <div>
-                    <strong>/users</strong> => Recurso para manipular a tabela "users" do banco de dados, é possível cadastrar (POST), alterar (PUT) e listar (GET) usuários.
+                    <strong>/users</strong> => Recurso para manipular a coleção "users" do banco de dados, é possível cadastrar (POST), alterar (PUT) e listar (GET) usuários.
                     <ul>
                         <li><strong>/users/:email</strong> => Para pesquisar por email</li>
                     </ul>
